# claude-portfolio-watchdog

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTRUCTION.md  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily-summary.yml  demo.yml  monitor.yml  weekly-report.yml
data/: cik_cache.json  sent_signals.json
docs/: API_COSTS.md  CHANGELOG.md  CUSTOMIZATION.md  TROUBLESHOOTING.md
portfolio/: README.md
src/: __init__.py  config.py  constants.py  healthcheck.py  main.py  portfolio_loader.py  test_setup.py
src/analytics/: __init__.py  insights.py  performance.py  risk.py
src/clients/: __init__.py  claude.py  market_data.py  sec_edgar.py  telegram.py
src/monitors/: __init__.py  analysts.py  base.py  earnings.py  insider.py  macro.py  news.py  price.py  volatility.py
src/reports/: __init__.py  charts.py  daily.py  pdf_templates.py  weekly_pdf.py
src/utils/: __init__.py  dedup.py  formatting.py  logger.py  templates.py  tickers.py
tests/: conftest.py  test_claude.py  test_config.py  test_portfolio_loader.py  test_telegram.py  test_tickers.py
tests/fixtures/: empty_portfolio.csv  ibkr_activity_sample.csv  ibkr_flex_sample.csv  simple_portfolio.csv
tests/test_analytics/: test_performance.py  test_risk.py
tests/test_monitors/: test_analysts.py  test_base.py  test_earnings.py  test_insider.py  test_macro.py  test_news.py  test_price.py
tests/test_reports/: test_weekly_pdf.py
tests/test_utils/: test_dedup.py  test_formatting.py  test_templates.py
