[project]
name = "claude-portfolio-watchdog"
version = "1.0.0"
description = "AI-powered 24/7 monitoring for an IBKR portfolio, delivered via Telegram."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplifications
    "RUF",              # ruff-specific
]
ignore = [
    "E501",   # line length — already enforced by black
    "B008",   # function-call-in-default-argument — false positives with Field()
    "RUF001", # ambiguous unicode characters in docstrings (Cyrillic OK)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts are fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers"
